[package]
name = "ti_tms570"
version = "0.1.0"
authors = ["Paolo Teti <paolo.teti@gmail.com>"]
description = "Board Support Package for TI Cortex-R4F/R5F TMS570"
build = "build.rs"

[profile.dev]
panic = "abort"
incremental = false
lto = true
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
panic = "abort"
incremental = false
lto = true
codegen-units = 1
debug = false
debug-assertions = false

[dependencies]
panic_impl = { path = "crates/panic_impl" }
cortexr4 = { path = "arch/cortex-r4" }
tms570 = { path = "chips/tms570" }
f021_fapi = { git = "https://github.com/paoloteti/f021-flash-api.git" }

[dependencies.linked_list_allocator]
default-features = true
version = "0.6.3"
