[package]
name = "tms570"
version = "0.1.0"
authors = ["Paolo Teti <paolo.teti@gmail.com>"]

[dependencies]
cortexr4 = { path = "../../arch/cortex-r4" }
vcell = "0.1.0"
r0 = "0.2.2"

[build-dependencies]
cc = "1.0"

[features]
default = ["errata57", "errata66", "pbist_rom"]
errata57 = []
errata66 = []
pbist_rom = []
pbist_ram = []

