[package]
name = "tms570"
version = "0.1.0"
authors = ["Paolo Teti <paolo.teti@gmail.com>"]

[profile.dev]
panic = "abort"
lto = true
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
panic = "abort"
lto = true
opt-level = 3
debug = false
debug-assertions = false

[dependencies]
cortexr4 = { path = "../../arch/cortex-r4" }
vcell = "0.1.0"
r0 = "0.2.2"

[build-dependencies]
cc = "1.0"

[features]
default = ["errata57", "errata66", "pbist_rom", "pbist_ram"]
errata57 = []
errata66 = []
pbist_rom = []
pbist_ram = []